# file_system_statistics

./: CMakeLists.txt  README.md
src/: filedirinfo.cpp  filedirinfo.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  statisticscollector.cpp  statisticscollector.h  statisticsmodel.cpp  statisticsmodel.h
